--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mandela Records - Produtora de funk em São Paulo</title>
+  <title>Mandela Vive - Produtora de Funk em SP | Gravação, Clipe e Lançamento Profissional</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/mandela-imgs/loog-aba-nav.png">
